--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline{
           agent{ label 'jenkins-agent-sonar'}
           steps{
                 script{
-                    sh "aws ecr get-login-password --region $(AWS_DEFAULT_REGION)| docker login --username AWS --password-stdin 211125636900.dkr.ecr.ap-south-1.amazonaws.com"
+                    sh "aws ecr get-login-password --region ap-south-1| docker login --username AWS --password-stdin 211125636900.dkr.ecr.ap-south-1.amazonaws.com"
                 }
           }
 
