adding build image V3.3

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,8 +30,10 @@ pipeline{
         {
             agent{ label 'jenkins-agent-sonar'}
             steps{
-                sh "sudo docker tag reactapp:1 211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp:1"                 
-
+                sh '''
+                sudo docker tag reactapp:1 211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp:1
+                docker push 211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp:1
+                '''
             }
         }
     }
