adding build image V3.5

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,8 +31,8 @@ pipeline{
             agent{ label 'jenkins-agent-sonar'}
             steps{
                 sh '''
-                sudo docker tag reactapp:1 211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp:1
-                sudo docker push 211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp:1
+                docker tag reactapp:1 211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp:1
+                docker push 211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp:1
                 '''
             }
         }
