--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,9 +3,11 @@ pipeline{
     environment{
         AWS_ACCOUNT_ID="211125636900"
         AWS_DEFAULT_REGION="ap-south-1"
-        AWS_REPO_NAME="react-spring-mongo/reactapp"
+        AWS_REPO_NAME="react-spring-mongo/${IMAGE_NAME}"
+        IMAGE_NAME="reactapp"
         IMAGE_TAG="1"
-        REPOSITORY_URL="211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp"
+        REPOSITORY_URL="211125636900.dkr.ecr.ap-south-1.amazonaws.com/${AWS_REPO_NAME}"
+        
     }
     stages{
         stage("loggin in ECR Repo")
@@ -34,6 +36,22 @@ pipeline{
                 docker tag reactapp:1 211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp:1
                 docker push 211125636900.dkr.ecr.ap-south-1.amazonaws.com/react-spring-mongo/reactapp:1
                 '''
+            }
+        }
+        stage("Deploy Image on K8s server"){
+            agent {label 'K8s-Master'}
+            steps{
+                script{
+                    sh '''
+                    sh "aws ecr get-login-password --region ap-south-1| docker login --username AWS --password-stdin 211125636900.dkr.ecr.ap-south-1.amazonaws.com"
+                    docker pull ${REPOSITORY_URL}:${IMAGE_TAG}
+                    docker tag  ${REPOSITORY_URL}:${IMAGE_TAG} ${IMAGE_NAME}:${IMAGE_TAG}
+                    docker rmi ${REPOSITORY_URL}:${IMAGE_TAG}
+                    docker run -d --name myreactapp -p 8088:8088 ${IMAGE_NAME}:${IMAGE_TAG}
+                    '''
+                    
+                    
+                }
             }
         }
     }
