--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,7 @@ pipeline{
 
             }
         }
-        stage("bulid image")
+        stage("Push Image on ECR")
         {
             agent{ label 'jenkins-agent-sonar'}
             steps{
@@ -43,7 +43,7 @@ pipeline{
             steps{
                 script{
                     sh '''
-                    sh "aws ecr get-login-password --region ap-south-1| docker login --username AWS --password-stdin 211125636900.dkr.ecr.ap-south-1.amazonaws.com"
+                    aws ecr get-login-password --region ap-south-1| docker login --username AWS --password-stdin 211125636900.dkr.ecr.ap-south-1.amazonaws.com
                     docker pull ${REPOSITORY_URL}:${IMAGE_TAG}
                     docker tag  ${REPOSITORY_URL}:${IMAGE_TAG} ${IMAGE_NAME}:${IMAGE_TAG}
                     docker rmi ${REPOSITORY_URL}:${IMAGE_TAG}
