--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,20 +41,20 @@ pipeline{
                 '''
             }
         }
-        stage("Deploy Image on K8s server"){
-            agent {label 'K8s-Master'}
-            steps{
-                script{
-                    sh '''
-                    aws ecr get-login-password --region ap-south-1| docker login --username AWS --password-stdin 211125636900.dkr.ecr.ap-south-1.amazonaws.com
-                    docker pull ${REPOSITORY_URL}:${IMAGE_TAG}
-                    docker tag  ${REPOSITORY_URL}:${IMAGE_TAG} ${IMAGE_NAME}:${IMAGE_TAG}
-                    docker rmi ${REPOSITORY_URL}:${IMAGE_TAG}
-                    docker run -d --name myreac-app -p 8088:8088 ${IMAGE_NAME}:${IMAGE_TAG}
-                    '''
-                }
-            }
-        }
+        // stage("Deploy Image on K8s server"){
+        //     agent {label 'K8s-Master'}
+        //     steps{
+        //         script{
+        //             sh '''
+        //             aws ecr get-login-password --region ap-south-1| docker login --username AWS --password-stdin 211125636900.dkr.ecr.ap-south-1.amazonaws.com
+        //             docker pull ${REPOSITORY_URL}:${IMAGE_TAG}
+        //             docker tag  ${REPOSITORY_URL}:${IMAGE_TAG} ${IMAGE_NAME}:${IMAGE_TAG}
+        //             docker rmi ${REPOSITORY_URL}:${IMAGE_TAG}
+        //             docker run -d --name myreac-app -p 8088:8088 ${IMAGE_NAME}:${IMAGE_TAG}
+        //             '''
+        //         }
+        //     }
+        // }
         stage("Helm deploy"){
             steps{
                 script{
