--- a/jenkinsfile
+++ b/jenkinsfile
@@ -56,6 +56,7 @@ pipeline{
         //     }
         // }
         stage("Helm deploy"){
+            agent {label 'K8s-Master'}
             steps{
                 script{
                     sh "helm upgrade myreactapp --install /var/helmchart/reactapp"
